[gd_scene load_steps=2 format=3 uid="uid://ded3cwl82u3vg"]

[ext_resource type="Script" path="res://scripts/kill_zone.gd" id="1_46jc7"]

[node name="KillZone" type="Area2D"]
script = ExtResource("1_46jc7")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="start_delay_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
